# scovid19.xyz

./: .banditrc  .gitignore  .prettierrc  CONTRIBUTING.md  Dockerfile  README.md  control.sh  cpanfile  cpanfile.snapshot  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: black.yml  format.yml  prettier.yml  pytest.yml  test.yml
app/: __init__.py
app/controllers/: __init__.py  infections.py  vaccines.py
app/lib/: Cache.py  Decorators.py  OpenData.py  Util.py  db.py
app/scripts/: scraper.py  tweet.py
app/templates/: error.html.j2  infections.html.j2  vaccine.html.j2
app/tests/: test_data.py  test_scripts.py
app/views/: __init__.py  api.py  pages.py
docs/: RUNNING_WITHOUT_DOCKER.md  TWITTER_BOT.md  WITHOUT_DOCKER.md
nginx/: scovid19.xyz
scovid19/: __init__.py  entrypoint.sh
scovid19/lib/: Cache.py  Decorators.py  Infections.py  OpenData.py  SCOVID.py  Util.py  Vaccine.py
scovid19/scripts/: scraper.py  tweet.py
scovid19/templates/: dashboard.html.j2  error.html.j2  index.html  index.html.j2  infections.html.j2  location.html  vaccine.html.j2
scovid19/tests/: test_data.py  test_scovid.py  test_scripts.py
scripts/: deploy.sh
src/: app.pl  app.py  entrypoint.sh  wsgi.py
src/lib/: Cache.pm  Decorators.py  Infections.py  OpenData.pm  OpenData.py  SCOVID.pm  SCOVID.py  Util.pm  Util.py  Vaccine.py
src/scripts/: scraper.py  tweet.py
src/templates/: _chart.html.ep  error.html  index.html  index.html.ep  (+2 more)
system/: scovid19.service
tools/: db.sh  deploy.sh  update_db.py
(+50 files in other folders)
